Fixed: Fade out on hover of collection movies in dark mode

--- a/frontend/src/Collection/Overview/CollectionMovie.css
+++ b/frontend/src/Collection/Overview/CollectionMovie.css
@@ -102,7 +102,7 @@ $hoverScale: 1.05;
 
   position: relative;
   display: block;
-  background-color: var(--defaultColor);
+  background-color: var(--black);
 }
 
 .monitorToggleButton {
